Adapt toolbar in swipeview to changing status bar heights.

Bug: 774969
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I483d94ad34af8e799b4560c15ab225eabf8659a4
Reviewed-on: https://chromium-review.googlesource.com/754683
Reviewed-by: Mark Cogan <marq@chromium.org>
Commit-Queue: Elodie Banel <lod@chromium.org>
Cr-Commit-Position: refs/heads/master@{#514125}
Former-commit-id: edd14e0644b2580407ef5ddabb07af6c0c7a7e43